enable using of system libffi for e2k, cos patches for libbfi cannot be published

--- a/src/tools/miri/Cargo.toml
+++ b/src/tools/miri/Cargo.toml
@@ -34,8 +34,12 @@ measureme = "10.0.0"
 [target.'cfg(unix)'.dependencies]
 libc = "0.2"
 
-[target.'cfg(target_os = "linux")'.dependencies]
+[target.'cfg(all(not(target_arch = "e2k64"), target_os = "linux"))'.dependencies]
 libffi = "3.0.0"
+libloading = "0.7"
+
+[target.'cfg(all(target_arch = "e2k64", target_os = "linux"))'.dependencies]
+libffi = { version = "3.0.0", features = ["system"] }
 libloading = "0.7"
 
 [dev-dependencies]
